# skill-editor

./: CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml  nightly.yml  release.yml
src/: behavior_model.cpp  behavior_model.h  behavior_schema.json  db_source.cpp  db_source.h  main.cpp  main_window.cpp  main_window.h  node_editor.cpp  node_editor.h  object_skills_panel.cpp  object_skills_panel.h  param_delegate.cpp  param_delegate.h  tree_scene.cpp  tree_scene.h  undo_commands.cpp  undo_commands.h  zoomable_view.h
